--- a/css/style.css
+++ b/css/style.css
@@ -1,17 +1,59 @@
+/*Header*/
 header{
     background-color: #2C3F50;
     color: white;
+    width: 100%;
+    height: 70px;
+
 }
 
+/*Main*/
 .img-size{
     width: 50%;
+    cursor: pointer;
 }
 
+.img-size:hover{
+    width: 80%;
+    filter: grayscale(50%);
+}
+.img-container {
+    position: relative;
+}
+
+.icon{
+    font-size:xx-large;
+    display: none;
+    
+ }
+
+.img-container:hover .icon {
+    display: block;
+}
+
+.img-container:hover img {
+    opacity: 0.5;
+    cursor: pointer;
+}
+
+
+.jumbotron{
+    height: calc(100vh - 70px);
+ 
+}
+
+/*style colors*/
 .b-turquoise{
     background-color: #1ABC9D;
+    border-color: #1ABC9D;
 }
 .b-steel-blue{
     background-color: #3B546D;
+}
+.btnBorder{
+    border-color: white;
+    background-color: #1ABC9D;
+
 }
 
 .c-white{
@@ -23,9 +65,12 @@ header{
 }
 .b-navy-blue{
     background-color: #2C3F50;
+    color: white;
+   
 }
 
-
-
-
+.b-white{
+    background-color: white;
+    border-color: white;
+}
 
