--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,9 @@ header{
     background-color: #2C3F50;
     color: white;
     width: 100%;
-    height: 70px;
+    min-height: 70px;
+  
+  
 
 }
 
@@ -14,7 +16,7 @@ header{
 }
 
 .img-size:hover{
-    width: 80%;
+    width: 60%;
     filter: grayscale(50%);
 }
 .img-container {
@@ -39,6 +41,16 @@ header{
 
 .jumbotron{
     height: calc(100vh - 70px);
+ 
+}
+
+/*Footer*/
+.icone{
+    border-radius: 50%;
+    color: #3B546D;
+    background-color: white;
+    font-size: 1.5rem;
+  
  
 }
 
